--- a/index.html
+++ b/index.html
@@ -146,8 +146,10 @@
                 <ul class="cards-worker">
                     <li class="card-img">
                         <img src="imeges/igor.jpg" alt="молодой человек" width="270">
+                        <div class="position-text">
                         <h3 class="title">Игорь Демьяненко</h3>
                         <p class="text-item">Product Designer</p>
+                        </div>
                     <ul class="cocial">
                             <li class="icon-link"><a class="link-icon" href="">
                                 <svg width="20" height="20">
@@ -173,8 +175,10 @@
                     </li>
                     <li class="card-img">
                         <img src="imeges/olga.jpg" alt="молодая девушка" width="270">
+                        <div class="position-text">
                         <h3 class="title">Ольга Репина</h3>
                         <p class="text-item">Frontend Developer</p>
+                        </div>
                         <ul class="cocial">
                             <li class="icon-link"><a class="link-icon" href="">
                                     <svg width="20" height="20">
@@ -200,8 +204,10 @@
                     </li>
                     <li class="card-img">
                         <img src="imeges/nikolay.jpg" alt="молодой человек" width="270">
+                        <div class="position-text">
                         <h3 class="title">Николай Тарасов</h3>
                         <p class="text-item">Marketing</p>
+                        </div>
                         <ul class="cocial">
                             <li class="icon-link"><a class="link-icon" href="">
                                     <svg width="20" height="20">
@@ -227,8 +233,10 @@
                     </li>
                     <li class="card-img">
                         <img src="imeges/misha.jpg" alt="молодой человек" width="270">
+                        <div class="position-text">
                         <h3 class="title">Михаил Ермаков</h3>
                         <p class="text-item">UI Designer</p>
+                        </div>
                         <ul class="cocial">
                             <li class="icon-link"><a class="link-icon" href="">
                                     <svg width="20" height="20">
